fix checkout bug on mobile

--- a/less/edd.less
+++ b/less/edd.less
@@ -20,6 +20,7 @@
 //   content: "\e013";
 // }
 
+
 #edd_secure_site_wrapper {
 	position: relative;
 	margin-bottom: 1rem;
@@ -129,6 +130,7 @@ p.edd_error { margin: 0 !important; }
 
 #edd_checkout_cart {
 	border: 1px solid darken( @light-grey, 3% );
+	width: 100%;
 
 	.edd_cart_header_row th {
 	    background: @light-grey;
