--- a/less/reset.less
+++ b/less/reset.less
@@ -245,10 +245,11 @@ samp {
  * 3. Address margins set differently in Firefox 4+, Safari 5, and Chrome.
  */
 
+//select,
+
 button,
 input,
 optgroup,
-select,
 textarea {
   color: inherit; /* 1 */
   font: inherit; /* 2 */
